modules/cli/src/test/resources/good/safety/stuckmsg/fourparty/Test01.scr
module good.safety.stuckmsg.fourparty.Test01;


global protocol Proto1(role A, role B, role C, role D)
{
	choice at A
	{
		1() from A to B;
		rec X
		{
			1() from A to B;
			choice at B
			{
				2() from B to C;
				2() from C to D;
				choice at C
				{
					2() from C to A;
				}
				or
				{
					() from C to A;
					2() from C to D;  // Reception error if following is uncommented
					//() from C to D;  // OK because D only receives 2's
				}
				continue X;
			}
		}
	}
	or
	{
		0() from A to B;
		0() from B to C;
		0() from C to D;
	}
}


